# RustOCR

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  readme.md
.github/workflows/: main.yml
src/: main.rs
src/controllers/: mod.rs  scan_controller.rs
