[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.4.0"
futures = "0.3.29"
futures-util = "0.3.29"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tesseract = "0.15.0"
utoipa = {version="4.0.0", features=["actix_extras"]}
utoipa-swagger-ui = {version="4.0.0", features=["actix-web"]}
uuid = {version="1.5.0", features=["v4"]}


[[bin]]
name = "scanner"
path = "src/main.rs"